# Site_articles

./: pyproject.toml
Articles/: db.sqlite3
Articles/Articles/: settings.py  urls.py
Articles/main/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
Articles/main/migrations/: 0001_initial.py
Articles/main/static/main/css/: style.css
Articles/main/templates/main/: addpage.html  base.html  contact.html  index.html  list_categories.html  login.html  post.html  register.html
Articles/main/templatetags/: main_tags.py
