[tool.poetry]
name = "site-articles"
version = "0.1.0"
description = ""
authors = ["philipp <nfrrus13@mail.ru>"]
readme = "README.md"
packages = [{include = "site_articles"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
Pillow = "^9.4.0"
django-debug-toolbar = "^3.8.1"


[tool.poetry.group.dev.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
